# ai-recipe-agent

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/api/: __init__.py  conversations.py  cooking.py
backend/checkpointer/: __init__.py  sqlite_checkpointer.py
backend/constants/: constants.py
backend/database/: connection.py  init.py  models.py
backend/graphs/: cooking_graph.py  nodes.py  state.py
backend/schemas/: __init__.py  api.py  classification.py  conversation.py
backend/services/: conversation_service.py
backend/tests/: test_cookware.py  test_nodes.py  test_schemas.py
backend/tools/: tavily_search.py
frontend/: .dockerignore  .prettierignore  Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/Chat/: ChatContainer.tsx  ChatInput.tsx  Message.tsx  MessageList.tsx  ThinkingSteps.tsx
frontend/components/Sidebar/: ConversationItem.tsx  ConversationList.tsx  Sidebar.tsx
frontend/components/ui/: ErrorMessage.tsx  LoadingDots.tsx  card.tsx  textarea.tsx
frontend/contexts/: ConversationContext.tsx
frontend/hooks/: useChat.ts
frontend/lib/api/: cooking.ts
frontend/lib/db/: conversationDb.ts
frontend/lib/services/: conversationService.ts
frontend/lib/types/: api.ts  conversation.ts  message.ts
